fixes alignment of pipeline name

--- a/cdap-ui/app/features/hydratorplusplus/toppanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/toppanel.less
@@ -429,9 +429,9 @@ body.theme-cdap {
         border-right: 0;
         .hydrator-detail-metadata {
           display: flex;
+          align-items: center;
           overflow: hidden;
-          padding: 5px 10px;
-          padding-bottom: 0;
+          padding: 0 10px;
 
           /*
             - Two buttons for schedule & start now
@@ -449,11 +449,9 @@ body.theme-cdap {
           max-width: ~"-moz-calc(100% - 410px)";
           max-width: ~"-webkit-calc(100% - 410px)";
           div.pipeline-type {
+            line-height: 1;
             text-decoration: none;
             padding: 0 10px 0 0;
-            span {
-              line-height: 1.3;
-            }
           }
           div.pipeline-name {
             text-align: left;
@@ -470,18 +468,13 @@ body.theme-cdap {
           h1 {
             font-size: 16px;
             font-weight: 500;
-            margin-top: 0;
-            margin-bottom: 0;
-            line-height: 20px;
-            display: inline-block;
+            margin: 0;
           }
           p {
             color: #666666;
             font-size: 12px;
             font-weight: 400;
             margin: 0;
-            margin-top: -4px;
-            line-height: 1.1;
           }
         }
         .next-run,
